--- a/HW2/BMIN_HW2_Spring_2024_amr10211.ipynb
+++ b/HW2/BMIN_HW2_Spring_2024_amr10211.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "id": "5dPhf70ia2vU"
    },
@@ -76,7 +76,8 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "import time\n"
    ]
   },
   {
@@ -1846,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "id": "39bUPWLhvIAF"
    },
@@ -1925,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {
     "id": "IQvvMXqmvIAG"
    },
@@ -2000,12 +2001,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Residual Unit: \n",
+    "#Resource to help write ResidualUnit: https://wandb.ai/amanarora/Written-Reports/reports/Understanding-ResNets-A-Deep-Dive-into-Residual-Networks-with-PyTorch--Vmlldzo1MDAxMTk5)\n",
+    "class ResidualUnit(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels):\n",
+    "        super(ResidualUnit, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.relu = nn.ReLU(inplace=True)\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        output = self.conv1(x)\n",
+    "        output = self.relu(output)\n",
+    "        output = self.conv2(output)\n",
+    "        output += x\n",
+    "        output = self.relu(output)\n",
+    "        \n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "#Full CNN Model:\n",
+    "class CNNModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CNNModel, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 8, kernel_size=5, stride=2, padding=2) #Convolutional layer 1        \n",
+    "        self.residual_unit1 = ResidualUnit(8,16) #Residual Unit 1\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2, padding=2) #Convolutional layer 2        \n",
+    "        self.residual_unit2 = ResidualUnit(32,64) #Residual Unit 2\n",
+    "        self.conv3 = nn.Conv2d(64,64, kernel_size=5, stride=2, padding=2) #Convolutional layer 3        \n",
+    "        self.residual_unit3 = ResidualUnit(64,128) #Residual Unit 3\n",
+    "        \n",
+    "        self.relu = nn.ReLU(inplace = True) #ReLU activation function\n",
+    "        self.maxpool = nn.MaxPool2d(kernel_size=2, stride=2) #Max Pooling\n",
+    "        self.fc = nn.Linear(128, 3) #Fully Connected layer with 3 classes\n",
+    "    \n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.residual_unit1(x)\n",
+    "        \n",
+    "        x = self.conv2(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.residual_unit2(x)        \n",
+    "        \n",
+    "        x = self.conv3(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.maxpool(x)\n",
+    "        x = self.residual_unit3(x)\n",
+    "        \n",
+    "        x = x.view(x.size(0), -1) #Reshape\n",
+    "        x = self.fc(x) #Fully Connected\n",
+    "        x = F.softmax(x, dim=1)#Classification\n",
+    "\n",
+    "        return x\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "id": "TrQ0e_rpvIAG"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# #Residual Unit: \n",
+    "# #Resource to help write ResidualUnit: https://wandb.ai/amanarora/Written-Reports/reports/Understanding-ResNets-A-Deep-Dive-into-Residual-Networks-with-PyTorch--Vmlldzo1MDAxMTk5)\n",
+    "# class ResidualUnit(nn.Module):\n",
+    "#     def __init__(self, in_channels, out_channels):\n",
+    "#         super(ResidualUnit, self).__init__()\n",
+    "#         self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "#         self.relu = nn.ReLU(inplace=True)\n",
+    "#         self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "            \n",
+    "#     def forward(self, x):\n",
+    "#         output = self.conv1(x)\n",
+    "#         output = self.relu(output)\n",
+    "#         output = self.conv2(output)\n",
+    "#         output += x\n",
+    "#         output = self.relu(output)\n",
+    "        \n",
+    "#         return output\n",
+    "\n",
+    "\n",
+    "# #Full CNN Model:\n",
+    "# class CNNModel(nn.Module):\n",
+    "#     def __init__(self):\n",
+    "#         super(CNNModel, self).__init__()\n",
+    "#         self.conv1 = nn.Conv2d(3, 8, kernel_size=5, stride=2, padding=2) #Convolutional layer 1        \n",
+    "#         self.maxpool = nn.MaxPool2d(kernel_size=2, stride=2) #Max Pooling\n",
+    "#         self.relu = nn.ReLU(inplace = True) #ReLU activation function\n",
+    "#         self.residual_units = self.make_residual_units() #Residual Units\n",
+    "#         self.fc = nn.Linear(128, 3) #Fully Connected layer with 3 classes\n",
+    "\n",
+    "#     def make_residual_units(self):\n",
+    "#         layers = []\n",
+    "#         layers.append(ResidualUnit(8, 16, stride=2))\n",
+    "#         layers.append(ResidualUnit(16, 32, stride=2))\n",
+    "#         layers.append(ResidualUnit(32, 64, stride=2))\n",
+    "#         layers.append(ResidualUnit(64, 64))\n",
+    "#         layers.append(ResidualUnit(64, 64))\n",
+    "#         layers.append(ResidualUnit(64, 128, stride=2))\n",
+    "#         return nn.Sequential(*layers)\n",
+    "        \n",
+    "#     def forward(self, x):\n",
+    "#         x = self.conv1(x)\n",
+    "#         x = self.relu(x)\n",
+    "#         x = self.maxpool(x)\n",
+    "#         x = self.residual_units(x)\n",
+    "#         x = x.view(x.size(0), -1)\n",
+    "#         x = self.fc(x)\n",
+    "\n",
+    "#         return x\n",
+    "    \n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2037,13 +2155,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FINISH EXPLANATION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "id": "XLgK7yThvIAG"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2068,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "id": "uMELBnHIvIAG",
     "outputId": "d53df7da-2f61-4775-cf71-c78d703c50c7"
@@ -2079,13 +2209,15 @@
      "output_type": "stream",
      "text": [
       "Selected subset class frequencies\n",
-      " 1    158\n",
+      " Class\n",
+      "1    158\n",
       "0     72\n",
-      "Name: Class, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "Selected subset class frequencies\n",
-      " 1    20\n",
+      " Class\n",
+      "1    20\n",
       "0    13\n",
-      "Name: Class, dtype: int64\n"
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -2115,12 +2247,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "id": "LivnhzWivIAH"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n"
+     ]
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda')\n",
+    "    print('y')\n",
+    "else:\n",
+    "    device = torch.device('cpu')\n",
+    "    print('n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load train and validation datasets\n",
+    "train_dataset = ChestXrayDataset('HW2_randomTrainSet.csv','/scratch/yc7087/shared/all_images')\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "validation_dataset = ChestXrayDataset('HW2_randomValidationSet.csv','/scratch/yc7087/shared/all_images')\n",
+    "validation_loader = DataLoader(validation_dataset, batch_size=1000, shuffle=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'to'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining Epoch: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m - Time: \u001b[39m\u001b[38;5;132;01m{:.2f}\u001b[39;00m\u001b[38;5;124m seconds\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(epoch, time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time))\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m): \u001b[38;5;66;03m# Train for 10 epochs for demonstration\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m     train(model, device, train_loader, optimizer, epoch)\n",
+      "Cell \u001b[0;32mIn[59], line 7\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, device, train_loader, optimizer, epoch)\u001b[0m\n\u001b[1;32m      5\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_idx, (data, target) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(train_loader):\n\u001b[0;32m----> 7\u001b[0m     data, target \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mto(device), target\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      8\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m      9\u001b[0m     output \u001b[38;5;241m=\u001b[39m model(data)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'to'"
+     ]
+    }
+   ],
+   "source": [
+    "model = CNNModel().to(device)\n",
+    "\n",
+    "def train(model, device, train_loader, optimizer, epoch):\n",
+    "    model.train()\n",
+    "    start_time = time.time()\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = criterion(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "    print('Training Epoch: {} - Time: {:.2f} seconds'.format(epoch, time.time() - start_time))\n",
+    "\n",
+    "    \n",
+    "for epoch in range(1, 11): # Train for 10 epochs for demonstration\n",
+    "    train(model, device, train_loader, optimizer, epoch)\n"
+   ]
   },
   {
    "cell_type": "markdown",
