--- a/HW2/BMIN_HW2_Spring_2024_amr10211.ipynb
+++ b/HW2/BMIN_HW2_Spring_2024_amr10211.ipynb
@@ -2148,67 +2148,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "39bUPWLhvIAF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set:\n",
+      "Class\n",
+      "2    6683\n",
+      "1    1535\n",
+      "0     765\n",
+      "Name: count, dtype: int64\n",
+      "Class\n",
+      "2    0.743961\n",
+      "1    0.170878\n",
+      "0    0.085161\n",
+      "Name: count, dtype: float64\n",
+      "\n",
+      "Validation set:\n",
+      "Class\n",
+      "2    955\n",
+      "1    220\n",
+      "0    109\n",
+      "Name: count, dtype: int64\n",
+      "Class\n",
+      "2    0.743769\n",
+      "1    0.171340\n",
+      "0    0.084891\n",
+      "Name: count, dtype: float64\n",
+      "\n",
+      "Test set:\n",
+      "Class\n",
+      "2    1909\n",
+      "1     439\n",
+      "0     219\n",
+      "Name: count, dtype: int64\n",
+      "Class\n",
+      "2    0.743670\n",
+      "1    0.171017\n",
+      "0    0.085314\n",
+      "Name: count, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# import os\n",
-    "# import random\n",
-    "# from sklearn.preprocessing import LabelEncoder\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# image_folder = \"/scratch/yc7087/shared/all_images\"\n",
-    "# data_df = pd.read_csv('Data_Entry_2017_v2020.csv')\n",
+    "from skimage import io\n",
+    "import torch\n",
+    "from skimage import color\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import time\n",
+    "import numpy as np\n",
     "\n",
-    "# #Define Classes \n",
-    "# le = LabelEncoder()\n",
-    "# data_df['Class'] = le.fit_transform(data['Finding Labels'])\n",
+    "data_df = pd.read_csv('Data_Entry_2017_v2020.csv')\n",
     "\n",
-    "# # Map original labels to encoded labels\n",
-    "# label_mapping = dict(zip(le.classes_, le.transform(le.classes_)))\n",
+    "#Filter for distinct cases of class:\n",
+    "data_df = data_df[(data_df['Finding Labels']=='Cardiomegaly') | (data_df['Finding Labels']=='Pneumothorax') | (data_df['Finding Labels']=='Infiltration')]\n",
     "\n",
-    "# # Split the data into train, validation, and test sets\n",
-    "# train_ratio = 0.7\n",
-    "# val_ratio = 0.1\n",
-    "# test_ratio = 0.2\n",
+    "#Map to label:\n",
+    "class_mapping = {'Cardiomegaly': 0, 'Pneumothorax': 1, 'Infiltration': 2}\n",
     "\n",
-    "# # Shuffle the data\n",
-    "# data = data.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "def map_class_to_int(class_name):\n",
+    "    return class_mapping[class_name]\n",
     "\n",
-    "# # Split indices\n",
-    "# num_samples = len(data)\n",
-    "# num_train = int(train_ratio * num_samples)\n",
-    "# num_val = int(val_ratio * num_samples)\n",
+    "data_df['Class'] = data_df['Finding Labels'].apply(map_class_to_int)\n",
     "\n",
-    "# train_indices = list(range(num_train))\n",
-    "# val_indices = list(range(num_train, num_train + num_val))\n",
-    "# test_indices = list(range(num_train + num_val, num_samples))\n",
+    "#Train val test split:\n",
+    "train_val_df, test_df = train_test_split(data_df, test_size=0.2, stratify=data_df['Class'])\n",
+    "train_df, val_df = train_test_split(train_val_df, test_size=0.125, stratify=train_val_df['Class'])\n",
     "\n",
-    "# # Create train, validation, and test sets\n",
-    "# train_set = data.iloc[train_indices]\n",
-    "# val_set = data.iloc[val_indices]\n",
-    "# test_set = data.iloc[test_indices]\n",
+    "#Statistics of classes per set:\n",
+    "total_train_samples = len(train_df)\n",
+    "total_val_samples = len(val_df)\n",
+    "total_test_samples = len(test_df)\n",
     "\n",
-    "# # Check class distribution in each set\n",
-    "# train_class_counts = train_set['Class'].value_counts()\n",
-    "# val_class_counts = val_set['Class'].value_counts()\n",
-    "# test_class_counts = test_set['Class'].value_counts()\n",
+    "print(\"Train set:\")\n",
+    "class_counts_train = train_df['Class'].value_counts()\n",
+    "print(class_counts_train)\n",
+    "print(class_counts_train / total_train_samples)\n",
     "\n",
-    "# # Write CSV files for train, validation, and test sets\n",
-    "# train_set.to_csv(os.path.join(data_path, \"train.csv\"), index=False)\n",
-    "# val_set.to_csv(os.path.join(data_path, \"validation.csv\"), index=False)\n",
-    "# test_set.to_csv(os.path.join(data_path, \"test.csv\"), index=False)\n",
+    "print(\"\\nValidation set:\")\n",
+    "class_counts_val = val_df['Class'].value_counts()\n",
+    "print(class_counts_val)\n",
+    "print(class_counts_val / total_val_samples)\n",
     "\n",
-    "# # Print statistics\n",
-    "# print(\"Train Set Class Distribution:\")\n",
-    "# print(train_class_counts)\n",
-    "# print(\"\\nValidation Set Class Distribution:\")\n",
-    "# print(val_class_counts)\n",
-    "# print(\"\\nTest Set Class Distribution:\")\n",
-    "# print(test_class_counts)\n",
-    "# print(\"\\nLabel Mapping:\")\n",
-    "# print(label_mapping)\n",
+    "print(\"\\nTest set:\")\n",
+    "class_counts_test = test_df['Class'].value_counts()\n",
+    "print(class_counts_test)\n",
+    "print(class_counts_test / total_test_samples)\n",
+    "\n",
+    "#Write to CSV:\n",
+    "train_df.to_csv('4_1_train_set.csv')\n",
+    "val_df.to_csv('4_1_val_set.csv')\n",
+    "test_df.to_csv('4_1_test_set.csv')\n",
     "\n"
    ]
   },
@@ -2233,17 +2274,6 @@
    },
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from skimage import io\n",
-    "import torch\n",
-    "from skimage import color\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import time\n",
-    "import numpy as np\n",
     "\n",
     "class ChestXrayDataset(Dataset):\n",
     "    \"\"\"Chest X-ray dataset from https://nihcc.app.box.com/v/ChestXray-NIHCC.\"\"\"\n",
